--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
 			<version>4.8.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.1.3</version>
+            <scope>test</scope>
+        </dependency>
 		
 	</dependencies>
 
