--- a/pom.xml
+++ b/pom.xml
@@ -9,24 +9,31 @@
 	<name>magic-config-service</name>
 
 	<dependencies>
-	    <dependency>
-	        <groupId>org.bluemagic.config</groupId>
-	        <artifactId>magic-config</artifactId>
-	        <version>1.1.0-SNAPSHOT</version>
-	    </dependency>
-	
+		<dependency>
+			<groupId>org.bluemagic.config</groupId>
+			<artifactId>magic-config</artifactId>
+			<version>1.1.0-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>3.0.5.RELEASE</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.1.3</version>
+			<scope>compile</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
